--- a/application/Espo/Modules/Crm/Resources/i18n/zh_TW/Contact.json
+++ b/application/Espo/Modules/Crm/Resources/i18n/zh_TW/Contact.json
@@ -20,7 +20,7 @@
     "accountIsInactive": "帳戶無效",
     "acceptanceStatusMeetings": "接受狀態 (會議)",
     "acceptanceStatusCalls": "接受狀態 (通話)",
-    "title": "切割高度 (像素)"
+    "title": "職稱"
   },
   "links": {
     "opportunities": "商機",
